# financial-model

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
docs/: OPERATIONS.md
scripts/: _supabase-cli.ps1  backup-db.ps1  export-storage.ps1
src/financial_model/: __init__.py  config.py
src/financial_model/agents/: __init__.py  base.py  catalog.py
src/financial_model/deliverables/: __init__.py  service.py
src/financial_model/domain/: __init__.py  buckets.py  models.py  utils.py
src/financial_model/memory/: __init__.py  inputter.py  interpreter.py  pending_memory.py  promotion.py  resolver.py  shared_memory.py  shared_memory_writer.py  validator.py  working_memory.py
src/financial_model/orchestration/: __init__.py  runner.py
src/financial_model/persistence/: __init__.py  postgres.py
src/financial_model/runtime/: __init__.py  protocols.py
supabase/: config.toml
supabase/migrations/: 001_extensions.sql  002_schemas.sql  003_system_tables.sql  004_raw_tables.sql  005_promotion_tables.sql  006_ledger_tables.sql  007_sml_tables.sql  008_deliverables_tables.sql  009_audit_tables.sql  010_indexes.sql  011_views.sql  012_roles_and_permissions.sql  013_storage_buckets.sql
tests/: fakes.py  test_orchestrator.py  test_promotion_pipeline.py
web/: index.html  tailwind.config.ts
web/src/: index.css
web/src/components/landing/: BeyondChat.tsx  CTA.tsx  Chapters.tsx  Footer.tsx  Hero.tsx  Industries.tsx  Nav.tsx
web/src/pages/: Index.tsx
